<?xml version="1.0"?>
<package format="2">
  <name>Hector-SLAM-Navigation</name>
  <version>0.0.0</version>
  <description>The hector-slam-navigation package</description>

  <maintainer email="ramune@todo.todo">ramune</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>move_base</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>move_base</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>move_base</exec_depend>

  <export></export>
</package>
